feat(vendor recipes): expand list of recipes  (#952)